
pl 39
	- fixes to Array
	- fixes to Interval


pl 38
	- Rational
	- Real.hh fixes
pl 37
	- various String/File_path mucking

pl 36
	- memmem fix: bugfree and *really* conforming to /usr/include/string.h

pl 35
	- bf: libc-extension: memmem

pl 34
	- string.icc
	- String_convert::precision_str: double to string with fixed precision

pl 33
	- String naming
	- unix style paths

pl 32
	- Assoc::clear
	- bf: Assoc[PreviouslyUsedAndDeletedKey] = foo

	
pl 31
	- removed String::bool () [Sigh], String::operator char const * 
pl 30
	- Cpu_timer
pl 29 
	- Dictionary_iter, Dictionary

pl 28
	- String::bool ()
	- GNU indentation.

pl 27
	- naming: macros are MACROS

pl 26
	- Getopt_long : command -- and command - 
	- Getopt_long: cosmetics

pl 25
	- unordered_substitute and unordered_del
	- Full_storage inline functions
	- more Diagonal_storage fixes

pl 24 
	- Diagonal_storage for band matrices.
	- matrix hackings: support for other Matrix_storage
	- NAME_MEMBERS(); -> DECLARE_MY_RUNTIME_TYPEINFO;
	- Matrix::band_i()

pl 23:
	- virtual-methods : static_is_type_b
	- Choleski checks off if not PARANOID

pl 22:
	- ACursor and PACursor to give array a List like interface.

pl 21:
pl 20.mb
	- bf: Warning about NPRINT only if debugging requested.

pl 20
	- List::junk_links()

pl 19
	- Array::reverse()

pl 18
	- Path::find("/usr/..") fix
	- Directed_graph_node
	- some Link_array extensions
	- Pointer_list::junk()

pl 17
	- naming: Pointer->Link, IPointer->Pointer

pl 16
	- Array::get()
	- P< > doco.

pl 15
	- #ifndef fixes (MB)
	- Dstream::clear ()

pl 14
	- interval methods

pl 13
	- better test-bed
	- Heap PQueue implementation

pl 12
	- No path search for "" and "-"

pl 11
	- template<> class P
	- assoc elem() methods

pl 10
	- Matrix_storage naming
	- Matrix_storage::try_right_multiply to help speed up
	  matrix multiply routines.

pl 9
	- _C iso _c_l
	- flower-debug.
	
pl 8
	

pl 7
	- PQueue blondification.
	- String_convert::i2hex_str fix, unsigned eqvs introduced