@@ -1,3 +1,6 @@
+pl 40
+	- do some Complex number stuff in Offset
+	- included axies, offset from lily
 
 pl 39
 	- fixes to Array
